{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 55,
  "lineage": "57b49c0a-3fc3-7580-ae32-70c99909f833",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.171.114.220",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-08-24T22:19:17.893-07:00",
            "id": "projects/stps-360015/regions/us-central1/addresses/vm-public-address",
            "name": "vm-public-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "stps-360015",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/stps-360015/regions/us-central1/addresses/vm-public-address"
          },
          "dependencies": [
            "google_compute_firewall.firewall"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-08-24T22:19:06.609-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/stps-360015/global/firewalls/stps-firewall-externalssh",
            "log_config": [],
            "name": "stps-firewall-externalssh",
            "network": "https://www.googleapis.com/compute/v1/projects/stps-360015/global/networks/default",
            "priority": 1000,
            "project": "stps-360015",
            "self_link": "https://www.googleapis.com/compute/v1/projects/stps-360015/global/firewalls/stps-firewall-externalssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "externalssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "webserverrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-08-24T22:19:06.676-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/stps-360015/global/firewalls/stps-webserver",
            "log_config": [],
            "name": "stps-webserver",
            "network": "https://www.googleapis.com/compute/v1/projects/stps-360015/global/networks/default",
            "priority": 1000,
            "project": "stps-360015",
            "self_link": "https://www.googleapis.com/compute/v1/projects/stps-360015/global/firewalls/stps-webserver",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "webserver"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "stpsinstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20220823",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/stps-360015/zones/us-central1-a/disks/stps-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/stps-360015/zones/us-central1-a/instances/stps-instance",
            "instance_id": "57902725042190478",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "mtywdm:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDpjQyZ6yyiAZTOjScG2j01mmJoOTQsiNPc9mwd2tRjOk3SFyYE4uYTmac6dyu5/gA0zKJpMKMZrSINrb2tcyZoS03+BeZWe3UWPj7va8yquroH3HnmxpwcQdNAPHhFI0nRMq99XE3gAdKyuuhZgsfWP+ldtQ8eokszPAS71ykXLVF/NPvNf436V8J6A3B9AguueFm2hKO2mlRsyRfEifmclHvr2r5xpcGAzZoz3g8hanvvqlPMVg4BPwAN71JhATo21UJ5LSofDF9ZH88j8Ml4g54aOTMCuu1R4AyQWQYfAEOcwPJ6njZjrNdIJlyYEJ2rct0jRDdFUaPHzlARSlJoCp3v8FhOeQ88BhUJBlZNs2Fala6DGaccltkN9Es21ZgUPA7mdM3os93LHQsHUbcGeyejpCBIeSJpOzGAXEKNl5 [...]
            },
            "metadata_fingerprint": "fhlR9qqzldY=",
            "name": "stps-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.171.114.220",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/stps-360015/global/networks/default",
                "network_ip": "10.128.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/stps-360015/regions/us-central1/subnetworks/default",
                "subnetwork_project": "stps-360015"
              }
            ],
            "project": "stps-360015",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/stps-360015/zones/us-central1-a/instances/stps-instance",
            "service_account": [
              {
                "email": "431387368324-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "externalssh",
              "webserver"
            ],
            "tags_fingerprint": "Mh9u1hBHiNA=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_address.static",
            "google_compute_firewall.firewall",
            "google_compute_firewall.webserverrule"
          ]
        }
      ]
    }
  ]
}